fixes by Lord_Cocain

--- a/src/main/resources/assets/tmechworks/lang/uk_UA.lang
+++ b/src/main/resources/assets/tmechworks/lang/uk_UA.lang
@@ -2,7 +2,7 @@ itemGroup.TMechworks=TMechworks
 
 tile.signalbus.name=Сигнальна шина
 tile.signalterminal.name=Сигнальний термінал
-tile.tmechworks.dynamo.name=Двигун
+tile.tmechworks.dynamo.name=Динамо-машина
 tile.tmechworks.meshFilter.empty.name=Порожня фільтрувальна сітка
 tile.tmechworks.meshFilter.wide.name=Широка фільтрувальна сітка
 tile.tmechworks.meshFilter.slat.name=Прямокутна фільтрувальна сітка
@@ -24,12 +24,12 @@ tooltip.drawbridge.amount=Кількість:
 tooltip.drawbridge.slot=Слот 
 tooltip.drawbridge.camoflauge=Камуфляж: 
 tooltip.drawbridge.direction=Напрямок розміщення: 
-tooltip.drawbridge.default=Зберігає свій інвентар, коли збирає
+tooltip.drawbridge.default=Зберігає свій інвентар після збору
 tooltip.drawbridge.direction.up=Вгору
 tooltip.drawbridge.direction.down=Вниз
 tooltip.drawbridge.direction.left=Вліво
 tooltip.drawbridge.direction.right=Вправо
 
 container.advdrawbridge=Просунутий розвідний міст
-container.inv=Inv
+container.inv=Інвентар
 container.drawbridge=Розвідний міст
